test_suite/tests/ui/integer/visibility/private.stderr
error[E0603]: struct import `Percentage` is private
  --> tests/ui/integer/visibility/private.rs:13:19
   |
13 |     encapsulated::Percentage::new(144);
   |                   ^^^^^^^^^^ private struct import
   |
note: the struct import `Percentage` is defined here...
  --> tests/ui/integer/visibility/private.rs:4:5
   |
4  |     #[nutype(sanitize(with = |n: i32| n.clamp(0, 100)))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the struct `Percentage` which is defined here
  --> tests/ui/integer/visibility/private.rs:4:5
   |
4  |     #[nutype(sanitize(with = |n: i32| n.clamp(0, 100)))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider importing it directly
   = note: this error originates in the attribute macro `nutype` (in Nightly builds, run with -Z macro-backtrace for more info)
